# plex-mcp-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  plex_mcp_server.py  pyproject.toml  requirements.txt  watcher.py
.github/workflows/: python-publish.yml
modules/: __init__.py  auth.py  client.py  collection.py  library.py  media.py  playback.py  playlist.py  search.py  server.py  sessions.py  user.py
src/plex_mcp_server/: __init__.py  __main__.py  server.py
src/plex_mcp_server/modules/: __init__.py  client.py  collection.py  library.py  media.py  playlist.py  search.py  server.py  sessions.py  user.py
tests/: __init__.py
