[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-mcp-server"
version = "0.1.0"
description = "MCP server for Plex Media Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "plexapi>=4.15.0",
    "starlette>=0.28.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "mcp",
]

[project.scripts]
plex-mcp-server = "plex_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]

[tool.setuptools]
py-modules = ["plex_mcp_server", "watcher"]
