[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-mcp-server"
version = "0.1.1"
description = "MCP server for Plex Media Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.11.12",
    "mcp==1.26.0",
    "plexapi==4.18.0",
    "python-dotenv==1.2.1",
    "Requests==2.32.5",
    "starlette==0.52.1",
    "uvicorn==0.40.0",
    "watchdog==6.0.0"
]

[project.scripts]
plex-mcp-server = "plex_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]

[tool.setuptools]
py-modules = ["plex_mcp_server", "watcher"]
